<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsImageMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TabbedView.PlaceholderFragment">


    <ImageView
        android:id="@+id/detailsImage"
        android:layout_width="367dp"
        android:layout_height="223dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeImageLabel"
        app:srcCompat="@android:color/background_light" />

    <LinearLayout
        android:id="@+id/imageButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
...
